k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devsu-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: devsu-app
  template:
    metadata:
      labels:
        app: devsu-app
    spec:
      containers:
      - name: devsu-container
        image: einoa/devsu:latest
        imagePullPolicy: Always
        resources:
          requests:
            cpu: "100m"
            memory: "256Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
        volumeMounts:
        - name: devsu-volume
          mountPath: /app/database
        securityContext:
          runAsNonRoot: true
          runAsUser: 1000
          allowPrivilegeEscalation: false
        livenessProbe:
          httpGet:
            path: /_health
            port: 8000
          initialDelaySeconds: 10
          periodSeconds: 10
        readinessProbe:
          tcpSocket:
            port: 8000
          initialDelaySeconds: 5
          periodSeconds: 10
      volumes:
      - name: devsu-volume
        persistentVolumeClaim:
          claimName: devsu-pvc
