k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devsu-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - devsu.local
    secretName: devsu-tls-secret
  rules:
  - host: devsu.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: devsu-service
            port:
              number: 80
